--- a/main.tex
+++ b/main.tex
@@ -42,18 +42,20 @@
 \pagenumbering{arabic}
 
 \input{sections/resumen.tex}
+\input{sections/introduccion.tex}
 \input{sections/objetivos.tex}
-\input{sections/objetivo minimo.tex}
 \input{sections/actividades.tex}
-\input{sections/diseño.tex}
 \input{sections/Marco Teorico.tex}
+\input{sections/diseño.tex}
 \input{sections/driver.tex}
-\input{sections/implementacion.tex}
-\input{sections/PCB.tex}
 \input{sections/simulaciones.tex}
-\input{sections/bitacora.tex}
-\input{sections/apendice.tex}
+\input{sections/prototipo.tex}
+\input{sections/implementacion.tex}
+\input{sections/prototipo.tex}
+\input{sections/PCB.tex}
+%\input{sections/bitacora.tex}
 \input{sections/conclusiones.tex}
+\input{sections/apendice.tex}
 \newpage
 \printbibliography
 
