--- a/sections/Marco Teorico.tex
+++ b/sections/Marco Teorico.tex
@@ -36,69 +36,76 @@ Aunque la mayoría de los convertidores se pueden utilizar para cumplir con los 
 los valores nominales del dispositivo de conmutación y el tamaño del transformador limitan sus aplicaciones a una potencia de salida específica. 
 La elección del convertidor depende del requisito de potencia de salida y de la complejidad que se desea afrontar.
 
-
-Conversor Forward
-
+\subsection{Conversor Forward}
 
 El convertidor forward es un convertidor CC-CC acoplado magnéticamente. 
 
 El transistor funciona como interruptor, estará cerrado un tiempo DT y abierto el resto del tiempo,
- (1 - D)T, siendo T el periodo de conmutación. 
+$(1 - D)T$, siendo $T$ el periodo de conmutación. 
 Para el análisis del circuito se supondrá funcionamiento 
 en régimen permanente y que la corriente en la inductancia Lx es permanente.
+
 El transformador posee tres devanados: los devanados 1 y 2 transfieren la energía de la
 fuente a la carga cuando el interruptor está cerrado; el devanado 3 se usa para proporcionar un
 camino a la corriente magnetizante cuando el interruptor está abierto y reducirla a cero antes del
 inicio de cada periodo de conmutación. El transformador se modela como tres devanados ideales
-con una inductancia magnetizante Lm conectada en paralelo con el devanado 1. En este modelo
+con una inductancia magnetizante $L_m$ conectada en paralelo con el devanado 1. En este modelo
 de transformador simplificado, no se incluyen las pérdidas ni las inductancias de dispersión.
+
 En el convertidor forward, la energía del generador se transfiere a la carga cuando el interruptor
-está cerrado. En el convertidor flyback, la energía se almacenaba en Lm cuando el conmutador
-estaba cerrado y era transferida a la carga cuando estaba abierto. En el convertidor directo, Lm
+está cerrado. En el convertidor flyback, la energía se almacenaba en $L_m$ cuando el conmutador
+estaba cerrado y era transferida a la carga cuando estaba abierto. En el convertidor directo, $L_m$
 es un parámetro no incluido en la relación entrada-salida, y se suele hacer grande su valor
 
-Análisis con el interruptor cerrado
-En la Figura 7.5b se muestra el circuito equivalente del convertidor forward cuando el interruptor
+\subsubsection{Análisis con el interruptor cerrado}
+En la Figura $X$ se muestra el circuito equivalente del convertidor forward cuando el interruptor
 está cerrado. Al cerrarse el interruptor se establece una tensión en el devanado 1 del transformador,
 por lo que
 
-La corriente en Lm deberá anularse antes del inicio del siguiente período, para desmagnetizar
-el núcleo del transformador. Cuando se abre el interruptor, la Ecuación 7.26 indica que la corriente
-iL decrece linealmente. Como D3 impide que la corriente iL se haga negativa, la Ecuación
-7.26m será válida siempre que iL sea positiva. Utilizando la Ecuación 7.26 obtenemos
+$$  $$
 
+La corriente en $L_m$ deberá anularse antes del inicio del siguiente período, para desmagnetizar
+el núcleo del transformador. Cuando se abre el interruptor, la Ecuación $X$ indica que la corriente
+$i_L$ decrece linealmente. Como $D_3$ impide que la corriente iL se haga negativa, la Ecuación
+$X$ será válida siempre que iL sea positiva. Utilizando la Ecuación $X$ obtenemos
 
+$$  $$
 
-Para que la corriente iL se anule una vez abierto el interruptor, la disminución de corriente
-debe ser igual al incremento de la corriente indicado en la Ecuación 7 .20. Si el tiempo necesario
-para que la corriente iL de pico se anule es deltaTx, 
+Para que la corriente $i_L$ se anule una vez abierto el interruptor, la disminución de corriente
+debe ser igual al incremento de la corriente indicado en la Ecuación $X$. Si el tiempo necesario
+para que la corriente $i_L$ de pico se anule es $\Delta T_x$, 
 
+$$  $$
 
-Resolviendo para obtener deltaTx, 
+Resolviendo para obtener $\Delta T_x$,
 
+$$ \Delta T_x=\Delta T_x $$
 
-El instante t0 en el que se anula la corriente es
+El instante $t_0$ en el que se anula la corriente es
 
+$$  $$
 
 Teniendo en cuenta que la corriente debe anularse antes del inicio del siguiente periodo,
 
+$$  $$
 
-Por ejemplo, si la relación N3/N1 = 1, el ciclo de trabajo D deberá ser menor que 0,5. La tensión
-en el interruptor abierto es Vs-v1, por lo que
+Por ejemplo, si la relación $N_3/N_1 = 1$, el ciclo de trabajo $D$ deberá ser menor que $0.5$. La tensión
+en el interruptor abierto es $V_s-v_1$, por lo que
 
+$$  $$
 
 La configuración del circuito a la salida del convertidor forward es la misma que la del convertidor
 reductor, por lo que el rizado de la tensión de salida también será el mismo:
 
+$$  $$
 
 Cuando el interruptor está cerrado, la fuente entrega energía a la carga a través del transformador.
 La tensión en el secundario del transformador es una forma de onda pulsante y la salida se
 analiza de la misma manera que la del convertidor CC-CC reductor. La energía almacenada en
-274 Electrónica de potencia
 la inductancia magnetizante cuando el interruptor está cerrado puede ser devuelta a la fuente de
 entrada a través de un tercer devanado del transformador cuando el interruptor está abierto.
 
-Restablecimiento del núcleo del transformador:
+\subsection{Restablecimiento del núcleo del transformador}
 La energía almacenada en el núcleo del transformador es devuelta a la fuente regulable y se incrementa la eficiencia. 
 
 A diferencia del convertidor flyback, la energía no se almacena en el primario y sólo se opera 
@@ -108,7 +115,7 @@ existen 2 modos de operación del transistor:
 
 Cuando el transistor se encuentre encendido:
 
-La tensión en el bobinado primario es Vs. La corriente que circula por el mismo comienza a incrementarse 
+La tensión en el bobinado primario es $V_s$. La corriente que circula por el mismo comienza a incrementarse 
 y se transfiere energía del primario al secundario y de aquí al filtro de salida y la carga por medio del diodo D2. 
 Debido a esta corriente se induce una corriente en el secundario dada por:
 
@@ -122,9 +129,9 @@ donde XXX es la corriente pico reflejada del inductor de salida del secundario y
 
 La tensión inducida en el secundario es:
 
-Debido a la tensión Vsecundario-Vo existente en bornes del inductor, su corriente se incrementa linealmente:
+Debido a la tensión $V_{secundario}-V_o$ existente en bornes del inductor, su corriente se incrementa linealmente:
 
-Esta misma también tendrá su valor máximo en t=DT:
+Esta misma también tendrá su valor máximo en $t=DT$:
 
 
 Cuando el transistor se encuentre apagado:
@@ -133,10 +140,10 @@ La tensión del transformador toma polaridad negativa, lo cual apaga al diodo D2
 Mientras conduce D3, la energía es entregada a la carga a través del inductor de salida. 
 La corriente por ambos dispositivos es la misma y decrece linealmente con el tiempo:
 
-Lo cual nos da el valor de I1(0):
+Lo cual nos da el valor de $I_1(t=0)$:
 
 
-El diodo D1 y el tercer bobinado del transformador le proporcionan un camino 
+El diodo $D_1$ y el tercer bobinado del transformador le proporcionan un camino 
 a la corriente magnetizante para que regrese a la fuente de entrada. 
 La tensión de salida es la integral en el tiempo de la tensión del bobinado secundario:
 
@@ -144,12 +151,12 @@ La máxima corriente de colector se da durante el encendido del transistor y la 
 
 
 Si la corriente debe anularse antes del comienzo de un nuevo período, 
-t0<T
+$t_0<T$
 
 COMPLETAR CON HART Y MATLAB
 
 CREO QUE ES MÁS COMPLICADO ESTE MÉTODO:
-Igualando la integral en el tiempo de la tensión de entrada cuando el transistor está encendido a la tensión Vr cuando el transistor está apagado nos da el ciclo de trabajo máximo:
+Igualando la integral en el tiempo de la tensión de entrada cuando el transistor está encendido a la tensión $V_r$ cuando el transistor está apagado nos da el ciclo de trabajo máximo:
 
 
 El ciclo de trabajo debe mantenerse siempre debajo del máximo para evitar la saturación del núcleo del transformador. 
@@ -157,7 +164,7 @@ Para que el flujo magnético vuelva a 0, la corriente debe anularse
  al final de cada ciclo de conmutación para restaurar el núcleo del transformador. 
 Si el núcleo está saturado, se puede dañar el transistor. 
 
-Comparación con el conversor flyback:
+\subsection{Comparación con el conversor flyback}
 
 El conversor forward requiere de una carga mínima para evitar un exceso en la tensión de salida. 
 Como el transformador no almacena energía, para un mismo nivel de potencia de salida, 
@@ -167,7 +174,7 @@ debido al agregado del inductor en la salida y al diodo de rueda libre D3.
 Por esto mismo, el capacitor de salida puede ser más pequeño. 
 
 
-Conversor Forward Doble Switch
+\subsection{Conversor Forward Doble Switch}
 
 El conversor forward se utiliza para potencias de salida de hasta 200W ya que se encuentra limitado 
 por los esfuerzos de tensión y de corriente durante su funcionamiento. 
@@ -175,7 +182,7 @@ El conversor forward de doble switch permite ser utilizado con potencias de hast
 reducción de la tensión en los transistores cuando los mismos se encuentran apagados. 
 Esto permite su uso en aplicaciones de alta tensión mediante transistores de menores prestaciones en tensión. 
 
-Funcionamiento 
+\subsubsection{Funcionamiento}
 
 Los transistores se encienden y se apagan de forma simultánea. 
 Cuando los transistores están encendidos, la tensión en el primario del transformador es igual a la tensión de entrada Vs. 
@@ -196,53 +203,53 @@ $$ V_{o}=V_{s}D(\frac{N_{2}}{N_{1}}) $$
 
 
 
-Circuitos de control
+\subsection{Circuitos de control}
 
 La tensión de salida del convertidor puede ser controlada variando el ciclo de trabajo D. 
 Para ello se utilizan circuitos integrados controladores PWM que sólo requieren de unos pocos componentes pasivos adicionales para su funcionamiento. 
 Internamente presenta 4 componentes principales:
-1) Un reloj ajustable que permite configurar la frecuencia de conmutación 
-2) Amplificador de error para la tensión de salida
-3) Generador de forma de onda de dientes de sierra sincronizado con el reloj
-4) Un comparador para comparar la señal de salida de error con la señal de dientes de sierra.
+\begin{enumerate}
+    \item Un reloj ajustable que permite configurar la frecuencia de conmutación
+    \item Amplificador de error para la tensión de salida
+    \item Generador de forma de onda de dientes de sierra sincronizado con el reloj
+    \item Un comparador para comparar la señal de salida de error con la señal de dientes de sierra
+\end{enumerate}
+
 Su señal de salida es la que controla a los transistores. 
 
 Para controlar la tensión de salida, los convertidores funcionan con un circuito de retroalimentación,
  en base a la señal realimentada , en un control por tensión o corriente.
 
-Control por tensión
+\subsubsection{Control por tensión}
 
 COMPLETAR CON LIBRO
 
 La duración del tiempo de encendido está determinada por el tiempo entre el reinicio del generador de diente de sierra
- y la intersección del voltaje de error con la señal de rampa positiva. 
- Cuando la tensión de salida es inferior al valor nominal se genera una tensión de error. 
- El ciclo de trabajo aumenta para causar un aumento posterior en el voltaje de salida. 
- La dinámica de retroalimentación está determinada por el circuito amplificador de error que consta de Z1 y Z2.
+y la intersección del voltaje de error con la señal de rampa positiva. 
+Cuando la tensión de salida es inferior al valor nominal se genera una tensión de error. 
+El ciclo de trabajo aumenta para causar un aumento posterior en el voltaje de salida. 
+La dinámica de retroalimentación está determinada por el circuito amplificador de error que consta de Z1 y Z2.
 
+\subsubsection{Control por corriente}
 
+Consiste en un lazo interno que muestrea el valor de la corriente primaria y apaga los interruptores tan pronto como la corriente alcanza cierto valor establecido por el lazo de voltaje externo. 
+De esta manera, el control de corriente logra una respuesta más rápida que el modo de voltaje. 
+La forma de onda de corriente primaria actúa como onda de diente de sierra. 
+El voltaje análogo a la corriente puede ser proporcionado por una pequeña resistencia o por un transformador de corriente. 
+La figura 13.19a muestra un convertidor flyback controlado por modo de corriente, donde la corriente del interruptor isw se usa como señal portadora. 
+La corriente del interruptor isw produce un voltaje a través de Rs, que se retroalimenta al comparador. 
+El encendido está sincronizado con el pulso del reloj y el apagado está determinado por el instante en que la corriente de entrada es igual al voltaje de error.
+Debido a su capacidad inherente de limitación de corriente máxima, el control de modo de corriente puede mejorar la confiabilidad de los interruptores de alimentación. El rendimiento dinámico se mejora debido al uso de la información actual adicional. El control de modo de corriente reduce efectivamente el sistema a primer orden al obligar a que la corriente del inductor se relacione con el voltaje de salida, logrando así una respuesta más rápida. Las figuras 13.18b–e muestran las formas de onda.
 
- Control por corriente 
+COMPLETAR CON JUSTIFICACIÓN DE POR QUÉ NO ELEGIMOS CONTROL POR CORRIENTE QUE PARECERÍA SER MEJOR. 
 
- Consiste en un lazo interno que muestrea el valor de la corriente primaria y apaga los interruptores tan pronto como la corriente alcanza cierto valor establecido por el lazo de voltaje externo. 
- De esta manera, el control de corriente logra una respuesta más rápida que el modo de voltaje. 
- La forma de onda de corriente primaria actúa como onda de diente de sierra. 
- El voltaje análogo a la corriente puede ser proporcionado por una pequeña resistencia o por un transformador de corriente. 
- La figura 13.19a muestra un convertidor flyback controlado por modo de corriente, donde la corriente del interruptor isw se usa como señal portadora. 
- La corriente del interruptor isw produce un voltaje a través de Rs, que se retroalimenta al comparador. 
- El encendido está sincronizado con el pulso del reloj y el apagado está determinado por el instante en que la corriente de entrada es igual al voltaje de error.
- Debido a su capacidad inherente de limitación de corriente máxima, el control de modo de corriente puede mejorar la confiabilidad de los interruptores de alimentación. El rendimiento dinámico se mejora debido al uso de la información actual adicional. El control de modo de corriente reduce efectivamente el sistema a primer orden al obligar a que la corriente del inductor se relacione con el voltaje de salida, logrando así una respuesta más rápida. Las figuras 13.18b–e muestran las formas de onda.
-
- COMPLETAR CON JUSTIFICACIÓN DE POR QUÉ NO ELEGIMOS CONTROL POR CORRIENTE QUE PARECERÍA SER MEJOR. 
-
- TL494 
+\subsubsection{TL494}
 
 El TL494 es un circuito de control de modulación de ancho de pulso (PWM) de frecuencia fija. 
 La modulación de los pulsos de salida se logra comparando la forma de onda de diente de sierra creada por el oscilador interno en el capacitor de temporización (CT) con cualquiera de las dos señales de control. 
 La etapa de salida se habilita durante el tiempo en que el voltaje de diente de sierra es mayor que las señales de control de voltaje. 
 A medida que aumenta la señal de control, disminuye el tiempo durante el cual la entrada en diente de sierra es mayor; por lo tanto, la duración del pulso de salida disminuye. 
 Un flip-flop de dirección de pulso dirige alternativamente el pulso modulado a cada uno de los dos transistores de salida.
-
 
 Alimentación: 7-40V.
 El TL494 está diseñado para operar desde un rango de suministro de voltaje de entrada entre 7 V y 40 V.
@@ -255,32 +262,32 @@ Oscilador interno ajustable
 Provee la forma de onda de diente de sierra al tiempo muerto y al comparador PWM. 
 Su frecuencia se programa mediante la selección de una resistencia Rt y un capacitor Ct. 
 El oscilador carga al Ct con una corriente constante determinada por Rt produciendo una rampa de tensión sobre Ct.
-$$Icarga=3V/Rt.$$
+$$ I_{carga}=\frac{3V}{R_t} $$
 Cuando la tensión sobre el mismo llega a 3V, el circuito se descarga y se reinicia el ciclo. 
-$f=1/(Rt*Ct)$ para single ended 
+$f=\frac{1}{R_t\cdot C_t}$ para single ended 
 Según la hoja de datos, los valores recomendados para Rt y Ct son:
-$$470pF<=Ct<=10uF$$
-$$1.8k\Omega<=Rt<=500k\Omega$$
-Para lograr la f=125kHz se eligió un capacitor de 1nF y para lograr la resistencia de $8k\Omega$ se ajustó un potenciómetro de $10k\Omega$. 
+$$470pF\leq C_t\leq 10\mu F$$
+$$1.8k\Omega\leq R_t\leq 500k\Omega$$
+Para lograr la $f=125kHz$ se eligió un capacitor de $1nF$ y para lograr la resistencia de $8k\Omega$ se ajustó un potenciómetro de $10k\Omega$. 
 
 Control de tiempo muerto (DTC)
 Permite controlar el ciclo de trabajo. 
 Es una entrada de alta impedancia. 
-Controla el tiempo de apagado mínimo. Con DTC a tierra es del 3%.
+Controla el tiempo de apagado mínimo. Con DTC a tierra es del 3\%.
 Si se aplica tensión en este puerto se le puede adicionar.
 El tiempo muerto o de apagado se controla linealmente desde su mínimo de 3\% hasta su máximo de 100\%, 
 variando su tensión de entrada entre 0 y 3.3V respectivamente. 
 
 Comparador 
 Alimentado por el regulador interno. 
-Tiempo de respuesta de 400ns. 
-Modula el ancho de pulso de la salida. Para esto se compara la rampa de tensión sobre el capacitor Ct con la señal de control
+Tiempo de respuesta de $400ns$. 
+Modula el ancho de pulso de la salida. Para esto se compara la rampa de tensión sobre el capacitor $C_t$ con la señal de control
 presente en la salida de los amplificadores de error. 
 
 2 amplificadores de error 
 Alta ganancia
-Se alimentan mediante su entrada Vi. 
-Tensión de MC de entrada: -0.3V a Vcc-2V
+Se alimentan mediante su entrada $V_i$. 
+Tensión de MC de entrada: -0.3V a $V_{cc}-2V$
 
 Output-Control Input
 Determinan el modo de operación de la salida de los transistores. 
@@ -289,7 +296,7 @@ Si está a Vref opera en push-pull donde cada transistor de salida está habilit
 
 Transistores de salida
 El integrado incluye 2 transistores que tienen la posibilidad de ser emisor común o seguidor por emisor. 
-Son capaces de generar hasta 200mA de salida. 
+Son capaces de generar hasta $200mA$ de salida. 
 
 
 Transformador: permite que no circule corriente continua por su secundario. 
@@ -312,13 +319,13 @@ La topología seguidor por emisor tiene ganancia de corriente hfe.
 La corriente que se entrega por la base es hfe veces menor que la que se le entrega a la carga. 
 Los transistores conducen en base a la tensión Vbe en sus junturas ya que entra base y emisor existe una juntura PN similar a un diodo. 
 Si no se polariza de forma correcta, no circula corriente por su base y en consecuencia tampoco por su colector. 
-El transistor NPN conduce corriente en su emisor cuando Vbe>0. 
-El transistor PNP conduce corriente en su emisor cuando Vbe<0 o Veb>0.
+El transistor NPN conduce corriente en su emisor cuando $V_{be}>0$. 
+El transistor PNP conduce corriente en su emisor cuando $V_{be}<0$ o $V_{eb}>0$.
 En el semiciclo positivo de la señal conduce el NPN y el PNP se corta y en el semiciclo negativo conduce el PNP y el NPN se corta. 
 Los transistores conducen de forma alternativa. 
 Cuando la tensión de entrada en la base de ambos transistores es 0 no conduce ningún transistor. 
 Esto implica que no existe consumo de corriente ni de potencia. 
-Vce de ambos transistores va de Vcc a 0.
+Vce de ambos transistores va de $V_{cc}$ a 0.
 
 Seguidor
 
@@ -326,7 +333,7 @@ Su impedancia de entrada es mucho mas alta que su impedancia de salida, de modo 
  Esto puede verse en el hecho de que la corriente de base es del orden de 100 veces menos que la corriente de emisor. 
  La baja impedancia de salida del seguidor emisor se adapta con una carga de baja impedancia y amortigua la fuente de señal.
 
-Snubber
+\subsection{Snubber}
 
 Un circuito snubber o de amortiguación es una red RC que permite eliminar ruido de alta frecuencia que existe en los nodos de los transistores.
 Hasta ahora se ha analizado el convertidor forward sin tener en cuenta los elementos parásitos asociados a cada componente. 
@@ -336,7 +343,7 @@ La energía acumulada en las inductancias parásitas mientras los transistores c
 La red snubber conforma un camino de baja impedancia para el drenaje de esta energía. 
 Valores pequeños de estos elementos parásitos generan resonancias del orden de los MHz. 
 
-Funcionamiento 
+\subsubsection{Funcionamiento}
 
 La energía acumulada en las inductancias parásitas mientras los transistores están encendidos se almacena como energía electroestática en el capacitor de la red snubber Csnb. 
 Cuando los transistores conducen, su tensión se eleva hasta Vin, la energía almacenada en el capacitor es: 
@@ -352,7 +359,7 @@ Cuando los transistores no conducen, su tensión disminuye hasta 0V, toda la ene
 Cuando se descarga, mitad de la energía almacenada se convierte en calor en la resistencia $R_{snb}$. 
 El análisis supone que el tiempo de carga y descarga es mucho más grande que la constante de tiempo RC. 
 
-Procedimiento para el cálculo de los componentes
+\subsubsection{Procedimiento para el cálculo de los componentes}
 
 \begin{enumerate}
     \item Con el osciloscopio se mide la frecuencia de la oscilación en la tensión del transistor Vds. $f_{r}=1.27MHz$ %Era esa?
@@ -374,7 +381,7 @@ Procedimiento para el cálculo de los componentes
     \item Se agrega un capacitor de Bypass de 0.1uF para amortiguar la inductancia del MOSFET high side.     
 \end{enumerate}
 
-IRF840
+\subsection{IRF840}
 
 MOSFET para switching de alta velocidad. 
 
