--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -1,16 +1,14 @@
 \begin{abstract}
 
-    El proyecto surge de la necesidad de cargar la batería de una bicicleta eléctrica con asistencia al pedaleo, 
-    complementando los proyectos realizados por los alumnos de la cátedra Proyecto Final durante el año 2021.
-
-    El uso de las baterías de litio está en constante crecimiento y, 
-    debido a que es un material altamente reactivo,
-    es necesario que el proceso de carga se realice de manera correcta,
-    con la finalidad de ofrecer una carga segura y eficaz.
-    
     En este informe se desarrolla un cargador para baterías de litio de 36V de diferentes capacidades,
     describiendo las decisiones tomadas durante la etapa de diseño,
     tanto los avances como los problemas enfrentados,
-    junto con las respectivas soluciones propuestas. 
+    junto con las respectivas soluciones propuestas.
+
+    El cargador admite baterías baterias de litio con corrientes de carga que van desde 1A hasta 6.7A
+    y se puede utilizar con una fuente de alimentación de 110V o 220V.
+
+    Se utilizó una topología forward con doble switch para la etapa de conversión de CC a CC
+    y un circuito de amplificadores operacionales para la etapa de control.
 
 \end{abstract}
