Fixes para que compile

--- a/sections/diseño.tex
+++ b/sections/diseño.tex
@@ -261,7 +261,7 @@ INSERTAR FÓRMULA DE LA ECUACIÓN 18 JUNTO A LA DESCRIPCIÓN DE SUS parámetros
 
 10) Capacitor de acoplamiento Cc1
 
-Cc1(D)=(Qg/deltavc1)+(((Vdrv-Vdc2).*D)/(deltavc1*Rgs*fdrv))+(Vdrv*(D.^2-D.^3))/(deltavc1*4*Lm*fdrv^2);
+$$ C_{C_1}(D)=\frac{Q_g}{\Delta V_{C_1}}+\frac{(V_{drv}-V_{{dc}_2})\times D}{\Delta V_{C_1}\times R_{gs}\times f_{drv}}+\frac{V_{drv}\times (D^2-D^3)}{\Delta V_{C1}\times 4\times L_m\times f_{drv}^2} $$
 
 La capacidad mínima que asegura permanecer por debajo del ripple de tensión máximo en todas las condiciones de operación 
 se puede encontrar determinando el máximo de la expresión anterior:
