--- a/sections/driver.tex
+++ b/sections/driver.tex
@@ -151,7 +151,7 @@ en relaciones de trabajo grandes, el voltaje del transformador se reduce proporc
 se desarrolla a través del capacitor de acoplamiento.
 Delta B: valor pico a pico del cambio en el flujo que se produce durante la duración del pulso. 
 
-Es mucho más difícil calcular ΔB en la ecuación Np. 
+Es mucho más difícil calcular $\Delta B$ en la ecuación Np. 
 La razón es el desplazamiento del flujo durante el funcionamiento transitorio. 
 Cuando el voltaje de entrada o la carga cambian rápidamente, el controlador PWM ajusta la relación de trabajo en consecuencia. 
 Es bastante difícil deducir el resultado cuantitativo exacto de la caminata de flujo. 
